--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^20.11.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "chromatic": "^11.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
