chore: add playwright

--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "start": "vite --open --mode ssr",
     "storybook": "storybook dev -p 6006",
     "test": "vitest",
+    "test.e2e": "playwright test",
+    "test.e2e.debug": "playwright test --ui --project=chromium",
     "qwik": "qwik",
     "chromatic": "npx chromatic --project-token=chpt_b8b698293e3af28"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.4.5",
     "@builder.io/qwik-city": "^1.4.5",
+    "@playwright/test": "^1.41.2",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-links": "^7.4.6",
     "@storybook/blocks": "^7.4.6",
