--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start": "vite --open --mode ssr",
     "storybook": "storybook dev -p 6006",
     "test": "vitest",
+    "test.coverage": "vitest run --coverage",
     "test.e2e": "playwright test",
     "test.e2e.debug": "playwright test --ui --project=chromium",
     "qwik": "qwik",
@@ -41,10 +42,12 @@
     "@storybook/builder-vite": "^7.4.6",
     "@storybook/html": "^7.4.6",
     "@storybook/html-vite": "^7.4.6",
+    "@types/density-clustering": "^1.3.3",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "@vitest/coverage-v8": "^1.3.1",
     "chromatic": "^11.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.5",
@@ -59,7 +62,10 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@modular-forms/qwik": "^0.23.1",
     "csv-reader": "^1.0.12",
-    "csv-writer": "^1.6.0"
+    "csv-writer": "^1.6.0",
+    "density-clustering": "^1.3.0",
+    "valibot": "^0.29.0"
   }
 }
