--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,15 @@
       "program": "${workspaceFolder}/node_modules/.bin/storybook",
       "args": ["dev", "-p", "6006"],
       "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "dev",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/node_modules/.bin/vite",
+      "args": ["--mode", "ssr"],
+      "outFiles": ["${workspaceFolder}/**/*.js"]
     }
   ]
 }
