--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "type": "module",
   "scripts": {
     "build": "qwik build",
-    "build-storybook": "storybook build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
@@ -24,26 +23,17 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "storybook": "storybook dev -p 6006",
-    "benchmark": "vitest --",
     "test": "vitest",
     "test.coverage": "vitest run --coverage",
     "test.e2e": "playwright test",
     "test.e2e.debug": "playwright test --ui --project=chromium",
-    "qwik": "qwik",
-    "chromatic": "npx chromatic --project-token=chpt_b8b698293e3af28"
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.4.5",
     "@builder.io/qwik-city": "^1.4.5",
     "@octokit/openapi-types": "^20.0.0",
     "@playwright/test": "^1.41.2",
-    "@storybook/addon-essentials": "^7.4.6",
-    "@storybook/addon-links": "^7.4.6",
-    "@storybook/blocks": "^7.4.6",
-    "@storybook/builder-vite": "^7.4.6",
-    "@storybook/html": "^7.4.6",
-    "@storybook/html-vite": "^7.4.6",
     "@types/density-clustering": "^1.3.3",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.6",
@@ -55,8 +45,6 @@
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
-    "storybook": "^7.4.6",
-    "storybook-framework-qwik": "^0.2.4",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3",
     "undici": "*",
