--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,16 @@
       "program": "${workspaceFolder}/node_modules/.bin/vite",
       "args": ["--mode", "ssr"],
       "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "name": "vitest",
+      "request": "launch",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "program": "${workspaceFolder}/./node_modules/vitest/vitest.mjs",
+      "cwd": "${workspaceFolder}",
+      "args": ["${file}"]
     }
   ]
 }
