--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "storybook": "storybook dev -p 6006",
+    "benchmark": "vitest --",
     "test": "vitest",
     "test.coverage": "vitest run --coverage",
     "test.e2e": "playwright test",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.4.5",
     "@builder.io/qwik-city": "^1.4.5",
+    "@octokit/openapi-types": "^20.0.0",
     "@playwright/test": "^1.41.2",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-links": "^7.4.6",
@@ -48,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
     "chromatic": "^11.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.5",
