--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "test": "vitest",
+    "test.ui": "vitest --ui",
     "test.coverage": "vitest run --coverage",
     "test.e2e": "playwright test",
     "test.e2e.debug": "playwright test --ui --project=chromium",
