--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "scripts": {
     "build": "qwik build",
+    "build-storybook": "storybook build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
@@ -23,18 +24,28 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
+    "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
     "test": "vitest",
-    "test.ui": "vitest --ui",
     "test.coverage": "vitest run --coverage",
     "test.e2e": "playwright test",
     "test.e2e.debug": "playwright test --ui --project=chromium",
-    "qwik": "qwik"
+    "test.ui": "vitest --ui",
+    "qwik": "qwik",
+    "chromatic": "npx chromatic --project-token chpt_b8b698293e3af28"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.4.5",
     "@builder.io/qwik-city": "^1.4.5",
     "@octokit/openapi-types": "^20.0.0",
     "@playwright/test": "^1.41.2",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/builder-vite": "^7.4.6",
+    "@storybook/html": "^7.4.6",
+    "@storybook/html-vite": "^7.4.6",
+    "@storybook/test-runner": "^0.16.0",
     "@types/density-clustering": "^1.3.3",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.6",
@@ -42,10 +53,12 @@
     "@typescript-eslint/parser": "^6.19.1",
     "@vitest/coverage-v8": "^1.3.1",
     "@vitest/ui": "^1.3.1",
-    "chromatic": "^11.0.0",
+    "chromatic": "^11.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
+    "storybook": "^7.4.6",
+    "storybook-framework-qwik": "^0.2.4",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3",
     "undici": "*",
